bump driver minimum to 5.0